# economic-intelligence-mcp

./: .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build-mcpb.sh  economic-intelligence-mcp.mcpb  manifest.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/economic_intelligence/: __init__.py  app_definition.py  db.py  ingestors.py  scheduler.py  server.py  sqlmodels.py
src/economic_intelligence/core/: __init__.py  models.py  scoring.py
src/economic_intelligence/core/clients/: __init__.py  bls.py  fdic.py  fred.py  treasury.py
src/economic_intelligence/ui/: app.html
