[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "economic-intelligence-mcp"
version = "0.1.0"
description = "MCP App Server for economic data — interest rates, jobs, inflation, housing, bank health. Interactive charts and cross-source analysis from FRED, BLS, Treasury, and FDIC."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MCPBundles", email = "support@mcpbundles.com" },
]
keywords = ["mcp", "economics", "finance", "FRED", "interest-rates", "inflation", "jobs", "housing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/thinkchainai/economic-intelligence-mcp"
Repository = "https://github.com/thinkchainai/economic-intelligence-mcp"
Documentation = "https://github.com/thinkchainai/economic-intelligence-mcp#readme"
"Hosted Version" = "https://mcpbundles.com"

[project.scripts]
economic-intelligence-mcp = "economic_intelligence.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/economic_intelligence"]
